# 8085-sumulation

./: CMakeLists.txt  README.md
include/: cpu.hpp  instructions.hpp  memory.hpp  simulator.hpp  utils.hpp
src/: main.cpp
src/core/: cpu.cpp  memory.cpp  simulator.cpp
src/utils/: utils.cpp
